cluster-2/istio-internal-ingress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/load-balancer-type: Internal
    cloud.google.com/neg: '{"ingress":true}'
    networking.gke.io/internal-load-balancer-allow-global-access: "true"
  labels:
    app: istio-internal-ingressgateway
  name: istio-internal-ingressgateway
  namespace: istio-system
spec:
  ports:
  - name: tls
    nodePort: 31491
    port: 15443
    protocol: TCP
    targetPort: 15443
  - name: http2
    nodePort: 30264
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: https
    nodePort: 30265
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  type: LoadBalancer
