cluster-2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeter
spec:
  ports:
  - name: grpc
    port: 8080
    protocol: TCP
  selector:
    app: greeter
  type: ClusterIP
