cluster-2/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: greeter
spec:
  gateways:
  - istio-internal-ingressgateway
  - mesh
  hosts:
  - 'greeter'
  - 'greeter.default.cluster-2'
  - 'greeter.default.svc.cluster.local'
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: greeter
        port:
          number: 8080
